# zk-proof-of-assets

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  batch-ecdsa.patch  ed25519-circom.patch  machine_initialization.sh  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
circuits/: batch_ecdsa.circom  ecdsa_verification.circom  ecdsa_verify.circom  eth.circom  groth16_verification.circom  keccak.circom  layer_one.circom  layer_three.circom  layer_two.circom  merkle.circom  poseidon.circom  secp256k1_scalar_mult_cached_windowed.circom
images/: full_workflow.excalidraw  poa_snark_recursive_design.excalidraw
scripts/: README.md  batch_ecdsa.sh  batch_ecdsa_inputs.json  batch_size_calculator.py  batch_size_optimizooor.py  build.sh  ecdsa_sigs_parser.ts  ecdsa_verification.sh  ecdsa_verification_inputs.json  error_handling.sh  full_workflow.sh  g16_prove.sh  g16_setup.sh  g16_verify.sh  generate_circuits.ts  groth16_verification.sh  input_prep_for_layer_one.ts  input_prep_for_layer_three.ts  input_prep_for_layer_two.ts  keccak.sh  keccak_inputs.json  machine_initialization.sh  membership_check.sh  merkle.sh  merkle_inputs.json  merkle_tree.rs  merkle_tree.ts  pedersen_commitment_checker.ts  sanitize_groth16_proof.py  test_on_keccak.sh
tests/: 19_sigs_2_batches_12_height.sh  1_sigs_1_batches_5_height.sh  3_sigs_2_batches_11_height.sh  3_sigs_2_batches_12_height.sh  4_sigs_2_batches_12_height.sh  5_sigs_2_batches_12_height.sh  7_sigs_3_batches_15_height.sh  README.md  anonymity_set.json  full_workflow.sh  full_workflow_parallel.sh  keys.ts  (+16 more)
(+122 files in other folders)
