[package]
name = "zk-proof-of-assets"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "1.1.3"
rs_merkle = "1.4.2"
ark-bn254 = "0.4.0"
light-poseidon = "0.2.0"
num-bigint = "0.4.4"

clap = { version = "4.0", features = ["derive"] }

serde_json = "1.0.111"
serde = { version = "1.0.188", features = ["derive"] }

[[bin]]
name = "merkle-tree"
path = "scripts/merkle_tree.rs"